2010-04-19 Massimo Manghi <mxmanghi@apache.org>
    * tests/upload.[rvt|test]: fix upload message sent to server. The end boundary
	went undetected and Rivet added it to the uploaded file. Thus the problem
	affected only the test, not the module. Added delimiter to the returned 
	message to allow easy spotting of an empty string.

2009-12-08 Karl Lehenbauer <karl@apache.org>
    * rivet/packages/form/form.tcl, form.txt: Add new form methods for HTML 5
      form elements "color", "date", "datetime", "datetime_local", "email",
      "file", "image", "month", "number", "range", "search", "tel", "time",
      "url", "week"

2009-11-03 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/rivetCore.c: in function Rivet_Upload the list of subcommands
    had 2 entries for 'tempname" leading Tcl_GetIndexfromObject to mismatch the entry for
    the 'names' subcommand with its numerical counterpart. 
    This caused the child process to segfault when processing a 'upload names' command.

2009-11-02 Massimo Manghi <mxmanghi@apache.org>
    * tests/apachetest/apachetest.tcl: apachetest::getallincludes failed to
    properly handle glob style file patterns. 

2009-09-17 Karl Lehenbauer <karl@apache.org>
    * rivet/packages/form/form.tcl, form.txt: Add a new form method, "button",
      that's just like "submit" except pressing enter doesn't cause it to be 
      invoked.  Add quick doc, form.txt, on the forms package.

      Terminate <option> with </option> in form selectors.

2009-09-15 Karl Lehenbauer <karl@apache.org>
    * rivet/packages/form/form.tcl: If the array containing default values
      for the form is passed in when the form is created
      (for instance: form myform -defaults response -method post),
      make sure form classes public variable "defaults" is set to
      that array name.

2009-09-03 Karl Lehenbauer <karl@apache.org>
    * src/apache-2/rivetCore.c: Add new command, apache_log_error, which